Modified mobile menu. Added some improvements.

--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -771,14 +771,15 @@
 
         <!--START header-bottom-->
         <div class="wrapHeaderBottom">
-            <div class="container hidden-sm hidden-xs">
+            <div class="container">
                 <div class="headerBottom">
-                    <ul class="headerCategoryList">
+                    <ul class="headerCategoryList _headerCategoryList">
                         <li class="headerCategoryItem headerCategoryItem1">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-bed"></span>
                                 <span class="headerCategoryLinkTitle">Для Спальни</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -833,10 +834,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem2">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-teapot"></span>
                                 <span class="headerCategoryLinkTitle">Для Кухни</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -891,10 +893,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem3">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-bathub"></span>
                                 <span class="headerCategoryLinkTitle">Для Ванной</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -949,10 +952,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem4">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-children-bed"></span>
                                 <span class="headerCategoryLinkTitle">Для Детской</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -1007,10 +1011,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem5">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-closes"></span>
                                 <span class="headerCategoryLinkTitle">Домашняя Одежда</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -1065,10 +1070,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem6">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-horse"></span>
                                 <span class="headerCategoryLinkTitle">Детский Мир</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -1123,10 +1129,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem7">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-blinds"></span>
                                 <span class="headerCategoryLinkTitle">Домашний уют</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -1181,10 +1188,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem8">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-lingerie"></span>
                                 <span class="headerCategoryLinkTitle">Нижнее белье</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -1239,10 +1247,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem9">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-mushroom"></span>
                                 <span class="headerCategoryLinkTitle">Для Отдыха</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
@@ -1297,10 +1306,11 @@
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem10">
-                            <a class="headerCategoryLink" href="">
+                            <div class="headerCategoryLink">
                                 <span class="icon-key"></span>
                                 <span class="headerCategoryLinkTitle">Для Гостиниц</span>
-                            </a>
+                                <span class="caret"></span>
+                            </div>
 
                             <ul class="headerCategorySubList">
                                 <div class="headerCategorySubListLeft">
