Added html structure for 'product-card' page.

--- a/pastelka/catalog.html
+++ b/pastelka/catalog.html
@@ -1540,7 +1540,7 @@
 
                                     <div class="filterButtons">
                                         <button class="filterButtonShow filterButton">Показать</button>
-                                        <button class="filterButtonReser filterButton">Сбросить</button>
+                                        <button class="filterButtonReset filterButton">Сбросить</button>
                                     </div>
                                 </form>
                             </div>
