--- a/pastelka/product-card.html
+++ b/pastelka/product-card.html
@@ -1406,8 +1406,28 @@
                         <div class="productTopLeft">
                             <div class="col-md-6">
                                 <div class="productGallery">
-
-                                </div>
+                                    <div class="col span_6 fwImage">
+                                        <div id="gallery-1" class="royalSlider rsDefault">
+                                            <a class="rsImg bugaga" data-rsbigimg="image/royalSlider/fullImages/gallery1.jpg" href="image/royalSlider/fullImages/gallery1.jpg">
+                                                <img class="rsTmb" src="image/royalSlider/smallImage/gallerySmall1.jpg">
+                                            </a>
+                                            <a class="rsImg" data-rsbigimg="image/royalSlider/fullImages/gallery1.jpg" href="image/royalSlider/fullImages/gallery1.jpg">
+                                                <img class="rsTmb" src="image/royalSlider/smallImage/gallerySmall1.jpg">
+                                            </a>
+                                            <a class="rsImg" data-rsbigimg="image/royalSlider/fullImages/gallery1.jpg" href="image/royalSlider/fullImages/gallery1.jpg">
+                                                <img class="rsTmb" src="image/royalSlider/smallImage/gallerySmall1.jpg">
+                                            </a>
+                                            <a class="rsImg" data-rsbigimg="image/royalSlider/fullImages/gallery1.jpg" href="image/royalSlider/fullImages/gallery1.jpg">
+                                                <img class="rsTmb" src="image/royalSlider/smallImage/gallerySmall1.jpg">
+                                            </a>
+                                            <a class="rsImg" data-rsbigimg="image/royalSlider/fullImages/gallery1.jpg" href="image/royalSlider/fullImages/gallery1.jpg">
+                                                <img class="rsTmb" src="image/royalSlider/smallImage/gallerySmall1.jpg">
+                                            </a>
+                                            <a class="rsImg" data-rsbigimg="image/royalSlider/fullImages/gallery1.jpg" href="image/royalSlider/fullImages/gallery1.jpg">
+                                                <img class="rsTmb" src="image/royalSlider/smallImage/gallerySmall1.jpg">
+                                            </a>
+                                        </div>
+                                    </div>
                                 <div class="productAdvantages">
                                     <ul class="productAdvantagesList">
                                         <li class="productAdvantagesItem">
@@ -1560,7 +1580,7 @@
                                         <div class="characteristicsCell">Производитель:
                                             La Scala , Китай</div>
                                         <div class="characteristicsCell">
-                                            <img src="" alt=""/>
+                                            <img src="image/la-scala.jpg" alt=""/>
                                         </div>
                                     </div>
                                     <div class="characteristicsRow">
@@ -1613,7 +1633,7 @@
                                 </div>
                                 <div class="cardReviews">
                                     <div class="cardReviewsAvatar">
-                                        <img class="cardReviewsAvatarImage" src="" alt=""/>
+                                        <img class="cardReviewsAvatarImage" src="image/avatarSocial.jpg" alt=""/>
                                     </div>
                                     <div class="cardReviewsText">
                                         <div class="cardReviewsTextTop">
@@ -1933,10 +1953,11 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/js/bootstrap-select.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/jquery.dlmenu.js"></script>
+<script src="js/royalSlider.js"></script>
 <script>
     $(function() {
         $( '#dl-menu' ).dlmenu({
