Finished 'product-card' page.

--- a/pastelka/product-card.html
+++ b/pastelka/product-card.html
@@ -1398,7 +1398,7 @@
         <div class="wrapProductCard">
             <!--START product-card-top-->
             <div class="container">
-                <div class="wrapTitleDecor wrapTitleDecorFull wrapTitleDecor">
+                <div class="wrapTitleDecor wrapTitleDecor">
                     <h2 class="productCardTitle titleDecor">Постельное Altinbasak</h2>
                 </div>
                 <div class="row">
@@ -1428,6 +1428,7 @@
                                             </a>
                                         </div>
                                     </div>
+                                </div>
                                 <div class="productAdvantages">
                                     <ul class="productAdvantagesList">
                                         <li class="productAdvantagesItem">
@@ -1438,13 +1439,7 @@
                                         </li>
                                         <li class="productAdvantagesItem">
                                             <div class="productAdvantagesIcon">
-                                                <span class="icon-discount">
-                                                    <span class="path1"></span>
-                                                    <span class="path2"></span>
-                                                    <span class="path3"></span>
-                                                    <span class="path4"></span>
-                                                    <span class="path5"></span>
-                                                </span>
+                                                <span class="icon-discount-label"></span>
                                             </div>
                                             <p class="productAdvantagesText">Дисконтная система скидок</p>
                                         </li>
@@ -1478,13 +1473,22 @@
                                             <span class="icon-bedclothes-XL"></span>
                                         </div>
                                         <div class="productCardCell productCardCell2">
-                                            <p class="productCardCellText">Пододеяльник: 1,200 х 220 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Пододеяльник:</span>
+                                                1,200 х 220 см
+                                            </p>
                                         </div>
                                         <div class="productCardCell productCardCell3">
-                                            <p class="productCardCellText">Простынь: 1,240 х 260 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Простынь:</span>
+                                                1,240 х 260 см
+                                            </p>
                                         </div>
                                         <div class="productCardCell productCardCell4">
-                                            <p class="productCardCellText">Наволочка: 2,50 х 70 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Наволочка:</span>
+                                                2,50 х 70 см
+                                            </p>
                                         </div>
                                     </div>
                                     <div class="productCardRow productCardRowBottom">
@@ -1507,13 +1511,22 @@
                                             <span class="icon-bedclothes-L"></span>
                                         </div>
                                         <div class="productCardCell productCardCell2">
-                                            <p class="productCardCellText">Пододеяльник: 1,200 х 220 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Пододеяльник:</span>
+                                                1,200 х 220 см
+                                            </p>
                                         </div>
                                         <div class="productCardCell productCardCell3">
-                                            <p class="productCardCellText">Простынь: 1,240 х 260 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Простынь:</span>
+                                                1,240 х 260 см
+                                            </p>
                                         </div>
                                         <div class="productCardCell productCardCell4">
-                                            <p class="productCardCellText">Наволочка: 2,50 х 70 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Наволочка:</span>
+                                                2,50 х 70 см
+                                            </p>
                                         </div>
                                     </div>
                                     <div class="productCardRow productCardRowBottom">
@@ -1536,13 +1549,22 @@
                                             <span class="icon-bedclothes-M"></span>
                                         </div>
                                         <div class="productCardCell productCardCell2">
-                                            <p class="productCardCellText">Пододеяльник: 1,200 х 220 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Пододеяльник:</span>
+                                                1,200 х 220 см
+                                            </p>
                                         </div>
                                         <div class="productCardCell productCardCell3">
-                                            <p class="productCardCellText">Простынь: 1,240 х 260 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Простынь:</span>
+                                                1,240 х 260 см
+                                            </p>
                                         </div>
                                         <div class="productCardCell productCardCell4">
-                                            <p class="productCardCellText">Наволочка: 2,50 х 70 см</p>
+                                            <p class="productCardCellText">
+                                                <span class="productCardCellTextTitle">Наволочка:</span>
+                                                2,50 х 70 см
+                                            </p>
                                         </div>
                                     </div>
                                     <div class="productCardRow productCardRowBottom">
@@ -1577,10 +1599,12 @@
 
                                 <div class="characteristicsTable">
                                     <div class="characteristicsRow">
-                                        <div class="characteristicsCell">Производитель:
-                                            La Scala , Китай</div>
                                         <div class="characteristicsCell">
-                                            <img src="image/la-scala.jpg" alt=""/>
+                                            <div class="characteristicsManufacturer">Производитель:</div>
+                                            La Scala , Китай
+                                        </div>
+                                        <div class="characteristicsCell">
+                                            <img class="characteristicsImage" src="image/la-scala.jpg" alt=""/>
                                         </div>
                                     </div>
                                     <div class="characteristicsRow">
@@ -1652,29 +1676,29 @@
                                             <div class="reviewsFormSocialText">Написать от:</div>
                                             <ul class="reviewsSocialList">
                                                 <li class="reviewsSocialItem">
-                                                    <a class="reviewsSocial" href="">
+                                                    <a class="reviewsSocialLink" href="">
                                                         <span class="icon-vkontakte"></span>
                                                     </a>
                                                 </li>
                                                 <li class="reviewsSocialItem">
-                                                    <a class="reviewsSocial" href="">
+                                                    <a class="reviewsSocialLink" href="">
                                                         <span class="icon-facebook"></span>
                                                     </a>
                                                 </li>
                                                 <li class="reviewsSocialItem">
-                                                    <a class="reviewsSocial" href="">
+                                                    <a class="reviewsSocialLink" href="">
                                                         <span class="icon-googleplus"></span>
                                                     </a>
                                                 </li>
                                             </ul>
                                         </div>
-                                        <form class="reviewsForm" action="">
-                                            <input class="reviewsFormInput reviewsFormInputName" type="text" placeholder="Имя"/>
-                                            <input class="reviewsFormInput reviewsFormInputThem" type="text" placeholder="Тема"/>
-                                            <textarea name="" id="" placeholder="Отзыв" class="reviewsFormTextarea"></textarea>
-                                            <button class="reviewsFormSend">Отправить</button>
-                                        </form>
                                     </div>
+                                    <form class="reviewsForm" action="">
+                                        <input class="reviewsFormInput reviewsFormInputName" type="text" placeholder="Имя"/>
+                                        <input class="reviewsFormInput reviewsFormInputThem" type="text" placeholder="Тема"/>
+                                        <textarea name="" id="" placeholder="Отзыв" class="reviewsFormTextarea"></textarea>
+                                        <button class="reviewsFormSend">Отправить</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -1683,7 +1707,7 @@
             </div>
             <!--END product-card-bottom-->
         </div>
-        <!--END product-curd-->
+        <!--END product-card-->
 
         <!--START special offers-->
         <div class="wrapSpecialOffers">
