Finished 'payment' page.

--- a/pastelka/articles.html
+++ b/pastelka/articles.html
@@ -1391,8 +1391,8 @@
         <!--START articles-->
         <div class="wrapArticles">
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="articlesTitle titleDecor">Статьи</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="articlesTitle titleDecor pageTitle">Статьи</h2>
                 </div>
                 <ul class="articlesList">
                     <li class="articlesItem">
