--- a/pastelka/delivery.html
+++ b/pastelka/delivery.html
@@ -1391,8 +1391,8 @@
         <!--START delivery-->
         <div class="wrapDelivery">
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="deliveryTitle titleDecor">Доставка</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="deliveryTitle titleDecor pageTitle">Доставка</h2>
                 </div>
 
                 <p class="deliveryAbout">Вы можете выбрать наиболее удобный способ доставки</p>
