--- a/pastelka/news.html
+++ b/pastelka/news.html
@@ -1391,8 +1391,8 @@
         <!--START news-page-->
         <div class="wrapNewsPage">
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="newsPageTitle titleDecor">Новости</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="newsPageTitle titleDecor pageTitle">Новости</h2>
                 </div>
 
                 <!--START news-page-single-->
