--- a/pastelka/partnership.html
+++ b/pastelka/partnership.html
@@ -1391,8 +1391,8 @@
         <!--START partnership-->
         <div class="wrapPartnership">
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="partnershipTitle titleDecor">Сотрудничество с нами</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="partnershipTitle titleDecor pageTitle">Сотрудничество с нами</h2>
                     </div>
 
                     <div class="wrapPartnershipText">
