--- a/pastelka/product-card.html
+++ b/pastelka/product-card.html
@@ -1398,8 +1398,8 @@
         <div class="wrapProductCard">
             <!--START product-card-top-->
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="productCardTitle titleDecor">Постельное Altinbasak</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="productCardTitle titleDecor pageTitle">Постельное Altinbasak</h2>
                 </div>
                 <div class="row">
                     <div class="productCardTop">
