--- a/pastelka/registrationSuccessful.html
+++ b/pastelka/registrationSuccessful.html
@@ -1391,8 +1391,8 @@
         <!--START register-successful-->
         <div class="wrapRegisterSuccessful">
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="registerTitle titleDecor">Регистрация</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="registerTitle titleDecor pageTitle">Регистрация</h2>
                 </div>
                 <div class="registerSuccessful">
                     <div class="registerSuccessfulTitle">Спасибо</div>
