--- a/pastelka/сheckout.html
+++ b/pastelka/сheckout.html
@@ -1391,8 +1391,8 @@
         <!--START checkout-->
         <div class="wrapCheckout">
             <div class="container">
-                <div class="wrapTitleDecor wrapTitleDecor">
-                    <h2 class="checkoutTitle titleDecor">Оформление заказа</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="checkoutTitle titleDecor pageTitle">Оформление заказа</h2>
                 </div>
 
                 <!--START checkout-products-->
@@ -1743,7 +1743,7 @@
 
                             <!--START checkout-product-form-comment-->
                             <div class="wrapCheckoutFormComment">
-                                <div class="col-md-8">
+                                <div class="col-md-12">
                                     <h2 class="checkoutFormTitle">Комментарий к заказу</h2>
                                     <div class="checkoutCommentTextarea">
                                         <textarea class="checkoutTextarea" name="" id="" placeholder="Текст вашего сообщения"></textarea>
