--- a/pastelka/contact.html
+++ b/pastelka/contact.html
@@ -1391,8 +1391,8 @@
         <!--START contact-page-->
         <div class="wrapContactPage">
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="contactPageTitle titleDecor">Контакты</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="contactPageTitle titleDecor pageTitle">Контакты</h2>
                 </div>
                 <div class="contactPageContent">
                     <div class="row">
@@ -1430,7 +1430,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
         <!--END contact-page-->
