--- a/pastelka/discount.html
+++ b/pastelka/discount.html
@@ -1391,8 +1391,8 @@
         <!--START discount-->
         <div class="wrapDiscount">
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="discountTitle titleDecor">Дисконтная система скидок</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="discountTitle titleDecor pageTitle">Дисконтная система скидок</h2>
                 </div>
                 <div class="discountAbout">В интернет-магазине Постелька</div>
 
