--- a/pastelka/payment.html
+++ b/pastelka/payment.html
@@ -2,7 +2,7 @@
 <html lang="ua">
 <head>
     <meta charset="UTF-8">
-    <title>О магазине</title>
+    <title>Оплата</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/css/bootstrap-select.min.css"/>
@@ -1382,82 +1382,90 @@
                     <li class="breadcrumbItem">
                         <a class="breadcrumbLink" href="#">Главная</a>
                     </li>
-                    <li class="breadcrumbItem active">О магазине</li>
+                    <li class="breadcrumbItem active">Оплата</li>
                 </ol>
             </div>
         </div>
         <!--END breadcrumb-->
 
-        <!--START about-->
-        <div class="wrapAbout">
+        <!--START payment-->
+        <div class="wrapPaymentPage">
             <div class="container">
                 <div class="wrapTitleDecor wrapPageTitle">
-                    <h2 class="aboutTitle titleDecor pageTitle">О магазине</h2>
+                    <h2 class="paymentPageTitle titleDecor pageTitle">Оплата</h2>
                 </div>
 
-                <div class="aboutBlock">
-                    <div class="aboutBlockImage">
-                        <img class="aboutImageBig aboutImageLeft" src="image/about1.jpg" alt=""/>
+                <p class="paymentPageTopText">Вы можете выбрать наиболее удобный способ оплаты</p>
+
+                <div class="paymentPageType">
+                    <h3 class="paymentPageTypeTitle">On-line оплата</h3>
+                    <div class="paymentPageTypeImage">
+                        <img class="paymentPageImage" src="image/payment1.jpg" alt=""/>
                     </div>
-                    <h3 class="aboutBlockTitle">Давайте познакомимся!</h3>
-                    <p class="aboutText">Наша компания родилась в 2007 году 27 июля. Наш ассортимент продукции насчитывал всего 170 позиций (35 <a class="aboutTextLink" href="">подушек</a>, 29 <a class="aboutTextLink" href="">одеял</a>, 40 комплектов постельного белья, 30 пледов, 28 полотенец, 8 покрывал), хотя тогда нам казалось, что это очень много :)</p>
-                    <p class="aboutText">На сегодняшний день у нас на сайте представлено более 96 000 товаров, в различных категориях от домашнего текстиля и посуды до детских товаров.</p>
-                    <p class="aboutText">Нашей целью, как и 8 лет назад, является привнесение в дом не просто комфорта, а настоящего уюта, создание атмосферы, в которой каждый человек чувствует себя защищённым и счастливым.</p>
-                </div>
+                    <div class="paymentPageTypeContent">
+                        <p class="paymentPageTypeText">
+                            На этих страницах вы выберете качественное постельное  Европейские производители постельных принадлежностей придерживаются стандартов, которые отличаются от наших соотношением сторон. Иными словами, их пододеяльники и простыни всегда шире и иногда длиннее, чем конкурирующие с ними аналоги. Например, пододеяльник, входящий в двуспальный евро комплект постельного белья, имеет ширину от 200 см. Аналогичный пододеяльник отечественных производителей не превышает, как правило, 180 см. Сегодня успешные компании пытаются удовлетворить разносторонние запросы потребителей из разных стран. Поэтому в их каталогах все чаще появляется продукция, соответствующая различным мировым стандартам.
+                        </p>
 
-                <div class="aboutBlock">
-                    <h3 class="aboutBlockTitle">Немного о продукции</h3>
-                    <p class="aboutText">Тщательно выбираем продукцию. При выборе продукции мы руководствуемся принципом трёх главных правил : качество, дизайн и комфорт.</p>
-                    <p class="aboutText">Выполняем ваши ожидания. В любом случае – мы всегда на вашей стороне. Стараемся отправить в максимально короткие сроки заказанную Вами продукцию, потому как сами не любим ждать. Если вы проживаете в Киеве, мы всегда привезём вам несколько вариантов (ведь иногда так трудно выбрать!). А для клиентов с других уголков Украины – стараемся обменять товар, если ваши ожидания не оправдались (мы сами этого не любим).</p>
-                    <p class="aboutText">Мы вас удивим! У нас ежедневно проходит большое количество акций, скидок и распродаж. Мы любим дарить подарки и хорошее настроение!</p>
-                </div>
-
-                <h2 class="aboutTitle titleDecor">Дополните Ваш дом уютом</h2>
-
-                <div class="aboutBlock">
-                    <div class="aboutBlockImage">
-                        <img class="aboutImage aboutImageRight" src="image/about2.jpg" alt=""/>
+                        <div class="paymentPageTypeForm">
+                            <form class="paymentPageForm" action="">
+                                <div class="registerFormRow">
+                                    <div class="registerFormName registerFormCell">Имя</div>
+                                    <div class="registerFormCell">
+                                        <input class="registerFormInput" type="text"/>
+                                    </div>
+                                </div>
+                                <div class="registerFormRow">
+                                    <div class="registerFormName registerFormCell">Фамилия</div>
+                                    <div class="registerFormCell">
+                                        <input class="registerFormInput" type="text"/>
+                                    </div>
+                                </div>
+                                <div class="checkoutFormCommentBtn">
+                                    <button class="checkoutCommentBtn">Оплатить</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                    <h3 class="aboutBlockTitle">Одеяла</h3>
-                    <p class="aboutText">Тщательно выбираем продукцию. При выборе продукции мы руководствуемся принципом трёх главных правил : качество, дизайн и комфорт.</p>
-                    <p class="aboutText">Выполняем ваши ожидания. В любом случае – мы всегда на вашей стороне. Стараемся отправить в максимально короткие сроки заказанную Вами продукцию, потому как сами не любим ждать. Если вы проживаете в Киеве, мы всегда привезём вам несколько вариантов (ведь иногда так трудно выбрать!). А для клиентов с других уголков Украины – стараемся обменять товар, если ваши ожидания не оправдались (мы сами этого не любим).</p>
                 </div>
 
-                <div class="aboutBlock">
-                    <div class="aboutBlockImage">
-                        <img class="aboutImage aboutImageLeft" src="image/about2.jpg" alt=""/>
+                <div class="paymentPageType">
+                    <h3 class="paymentPageTypeTitle">Карта “Приват Банк”</h3>
+                    <div class="paymentPageTypeImage">
+                        <img class="paymentPageImage" src="image/payment2.jpg" alt=""/>
                     </div>
-                    <h3 class="aboutBlockTitle">Текстиль</h3>
-                    <p class="aboutText">Тщательно выбираем продукцию. При выборе продукции мы руководствуемся принципом трёх главных правил : качество, дизайн и комфорт.</p>
-                    <p class="aboutText">Выполняем ваши ожидания. В любом случае – мы всегда на вашей стороне. Стараемся отправить в максимально короткие сроки заказанную Вами продукцию, потому как сами не любим ждать. Если вы проживаете в Киеве, мы всегда привезём вам несколько вариантов (ведь иногда так трудно выбрать!). А для клиентов с других уголков Украины – стараемся обменять товар, если ваши ожидания не оправдались (мы сами этого не любим).</p>
-                </div>
-
-                <div class="aboutBlock">
-                    <div class="aboutBlockImage">
-                        <img class="aboutImage aboutImageRight" src="image/about2.jpg" alt=""/>
+                    <div class="paymentPageTypeContent">
+                        <p class="paymentPageTypeText">
+                            На этих страницах вы выберете качественное постельное  Европейские производители постельных принадлежностей придерживаются стандартов, которые отличаются от наших соотношением сторон. Иными словами, их пододеяльники и простыни всегда шире и иногда длиннее, чем конкурирующие с ними аналоги. Например, пододеяльник, входящий в двуспальный евро комплект постельного белья, имеет ширину от 200 см. Аналогичный пододеяльник отечественных производителей не превышает, как правило, 180 см. Сегодня успешные компании пытаются удовлетворить разносторонние запросы потребителей из разных стран. Поэтому в их каталогах все чаще появляется продукция, соответствующая различным мировым стандартам.
+                        </p>
                     </div>
-                    <h3 class="aboutBlockTitle">Халаты и полотенца</h3>
-                    <p class="aboutText">Тщательно выбираем продукцию. При выборе продукции мы руководствуемся принципом трёх главных правил : качество, дизайн и комфорт.</p>
-                    <p class="aboutText">Выполняем ваши ожидания. В любом случае – мы всегда на вашей стороне. Стараемся отправить в максимально короткие сроки заказанную Вами продукцию, потому как сами не любим ждать. Если вы проживаете в Киеве, мы всегда привезём вам несколько вариантов (ведь иногда так трудно выбрать!). А для клиентов с других уголков Украины – стараемся обменять товар, если ваши ожидания не оправдались (мы сами этого не любим).</p>
                 </div>
 
-                <div class="aboutBlock">
-                    <div class="aboutBlockImage">
-                        <img class="aboutImage aboutImageLeft" src="image/about2.jpg" alt=""/>
+                <div class="paymentPageType">
+                    <h3 class="paymentPageTypeTitle">Наличными курьеру</h3>
+                    <div class="paymentPageTypeImage">
+                        <img class="paymentPageImage" src="image/payment3.jpg" alt=""/>
                     </div>
-                    <h3 class="aboutBlockTitle">Подушки</h3>
-                    <p class="aboutText">Тщательно выбираем продукцию. При выборе продукции мы руководствуемся принципом трёх главных правил : качество, дизайн и комфорт.</p>
-                    <p class="aboutText">Выполняем ваши ожидания. В любом случае – мы всегда на вашей стороне. Стараемся отправить в максимально короткие сроки заказанную Вами продукцию, потому как сами не любим ждать. Если вы проживаете в Киеве, мы всегда привезём вам несколько вариантов (ведь иногда так трудно выбрать!). А для клиентов с других уголков Украины – стараемся обменять товар, если ваши ожидания не оправдались (мы сами этого не любим).</p>
+                    <div class="paymentPageTypeContent">
+                        <p class="paymentPageTypeText">На этих страницах вы выберете качественное постельное  Европейские производители постельных принадлежностей придерживаются стандартов.</p>
+                    </div>
                 </div>
 
-                <h2 class="aboutTitle titleDecor">Важно</h2>
-
-                <div class="aboutBlockImportant">
-                    <p class="aboutText">Выполняем ваши ожидания. В любом случае – мы всегда на вашей стороне. Стараемся отправить в максимально короткие сроки заказанную Вами продукцию, потому как сами не любим ждать. Если вы проживаете в Киеве, мы всегда привезём вам несколько вариантов (ведь иногда так трудно выбрать!). А для клиентов с других уголков Украины – стараемся обменять товар, если ваши ожидания не оправдались (мы сами этого не любим).</p>
+                <div class="paymentPageType">
+                    <h3 class="paymentPageTypeTitle">Наложенный платеж</h3>
+                    <div class="paymentPageTypeImage">
+                        <img class="paymentPageImage" src="image/payment4.jpg" alt=""/>
+                    </div>
+                    <div class="paymentPageTypeContent">
+                        <p class="paymentPageTypeText">
+                            На этих страницах вы выберете качественное постельное  Европейские производители постельных принадлежностей придерживаются стандартов, которые отличаются от наших соотношением сторон. Иными словами, их пододеяльники и простыни всегда шире и иногда длиннее, чем конкурирующие с ними аналоги. Например, пододеяльник, входящий в двуспальный евро комплект постельного белья, имеет ширину от 200 см. Аналогичный пододеяльник отечественных производителей не превышает, как правило, 180 см. Сегодня успешные компании пытаются удовлетворить разносторонние запросы потребителей из разных стран. Поэтому в их каталогах все чаще появляется продукция, соответствующая различным мировым стандартам.
+                        </p>
+                    </div>
                 </div>
+
             </div>
         </div>
-        <!--END about-->
+        <!--END paymente-->
     </div>
     <!--END content-->
 
