--- a/pastelka/registration.html
+++ b/pastelka/registration.html
@@ -1391,8 +1391,8 @@
         <!--START register-->
         <div class="wrapRegister">
             <div class="container">
-                <div class="wrapTitleDecor">
-                    <h2 class="registerTitle titleDecor">Регистрация</h2>
+                <div class="wrapTitleDecor wrapPageTitle">
+                    <h2 class="registerTitle titleDecor pageTitle">Регистрация</h2>
                 </div>
                 <div class="row">
                     <div class="register">
