Finished 'order' page.

--- a/pastelka/order.html
+++ b/pastelka/order.html
@@ -2,7 +2,7 @@
 <html lang="ua">
 <head>
     <meta charset="UTF-8">
-    <title>Оплата</title>
+    <title>Как сделать заказ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/css/bootstrap-select.min.css"/>
@@ -1388,84 +1388,51 @@
         </div>
         <!--END breadcrumb-->
 
-        <!--START payment-->
-        <div class="wrapPaymentPage">
+        <!--START order-->
+        <div class="wrapOrderPage">
             <div class="container">
                 <div class="wrapTitleDecor wrapPageTitle">
-                    <h2 class="paymentPageTitle titleDecor pageTitle">Оплата</h2>
+                    <h2 class="orderPageTitle titleDecor pageTitle">Как сделать заказ</h2>
                 </div>
 
-                <p class="paymentPageTopText">Вы можете выбрать наиболее удобный способ оплаты</p>
-
-                <div class="paymentPageType">
-                    <h3 class="paymentPageTypeTitle">On-line оплата</h3>
-                    <div class="paymentPageTypeImage">
-                        <img class="paymentPageImage" src="image/payment1.jpg" alt=""/>
+                <div class="orderItems">
+                    <div class="orderItem orderItem1">
+                        <div class="orderItem">
+                            <p class="orderItemText"><span class="orderItemNumber">1.</span> Выбираете товары, нажимаете кнопку <a class="orderItemLink" href="">В корзину</a></p>
+                            <img class="orderItemImage" src="image/order1.jpg" alt=""/>
+                        </div>
                     </div>
-                    <div class="paymentPageTypeContent">
-                        <p class="paymentPageTypeText">
-                            На этих страницах вы выберете качественное постельное  Европейские производители постельных принадлежностей придерживаются стандартов, которые отличаются от наших соотношением сторон. Иными словами, их пододеяльники и простыни всегда шире и иногда длиннее, чем конкурирующие с ними аналоги. Например, пододеяльник, входящий в двуспальный евро комплект постельного белья, имеет ширину от 200 см. Аналогичный пододеяльник отечественных производителей не превышает, как правило, 180 см. Сегодня успешные компании пытаются удовлетворить разносторонние запросы потребителей из разных стран. Поэтому в их каталогах все чаще появляется продукция, соответствующая различным мировым стандартам.
-                        </p>
 
-                        <div class="paymentPageTypeForm">
-                            <form class="paymentPageForm" action="">
-                                <div class="registerFormRow">
-                                    <div class="registerFormName registerFormCell">Имя</div>
-                                    <div class="registerFormCell">
-                                        <input class="registerFormInput" type="text"/>
-                                    </div>
-                                </div>
-                                <div class="registerFormRow">
-                                    <div class="registerFormName registerFormCell">Фамилия</div>
-                                    <div class="registerFormCell">
-                                        <input class="registerFormInput" type="text"/>
-                                    </div>
-                                </div>
-                                <div class="checkoutFormCommentBtn">
-                                    <button class="checkoutCommentBtn">Оплатить</button>
-                                </div>
-                            </form>
+                    <div class="orderItem orderItem1">
+                        <div class="orderItem">
+                            <p class="orderItemText"><span class="orderItemNumber">2.</span> Выбираете товары, нажимаете кнопку <a class="orderItemLink" href="">В корзину</a> Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку</p>
+                            <img class="orderItemImage" src="image/order2.jpg" alt=""/>
+                        </div>
+                    </div>
+
+                    <div class="orderItem orderItem3">
+                        <div class="orderItem">
+                            <p class="orderItemText"><span class="orderItemNumber">3.</span> Выбираете товары, нажимаете кнопку <a class="orderItemLink" href="">В корзину</a> Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку</p>
+                            <img class="orderItemImage" src="image/order3.jpg" alt=""/>
+                        </div>
+                    </div>
+
+                    <div class="orderItem orderItem4">
+                        <div class="orderItem">
+                            <p class="orderItemText"><span class="orderItemNumber">4.</span> Выбираете товары, нажимаете кнопку <a class="orderItemLink" href="">В корзину</a> Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопку</p>
+                            <img class="orderItemImage" src="image/order4.jpg" alt=""/>
                         </div>
                     </div>
                 </div>
 
-                <div class="paymentPageType">
-                    <h3 class="paymentPageTypeTitle">Карта “Приват Банк”</h3>
-                    <div class="paymentPageTypeImage">
-                        <img class="paymentPageImage" src="image/payment2.jpg" alt=""/>
-                    </div>
-                    <div class="paymentPageTypeContent">
-                        <p class="paymentPageTypeText">
-                            На этих страницах вы выберете качественное постельное  Европейские производители постельных принадлежностей придерживаются стандартов, которые отличаются от наших соотношением сторон. Иными словами, их пододеяльники и простыни всегда шире и иногда длиннее, чем конкурирующие с ними аналоги. Например, пододеяльник, входящий в двуспальный евро комплект постельного белья, имеет ширину от 200 см. Аналогичный пододеяльник отечественных производителей не превышает, как правило, 180 см. Сегодня успешные компании пытаются удовлетворить разносторонние запросы потребителей из разных стран. Поэтому в их каталогах все чаще появляется продукция, соответствующая различным мировым стандартам.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="paymentPageType">
-                    <h3 class="paymentPageTypeTitle">Наличными курьеру</h3>
-                    <div class="paymentPageTypeImage">
-                        <img class="paymentPageImage" src="image/payment3.jpg" alt=""/>
-                    </div>
-                    <div class="paymentPageTypeContent">
-                        <p class="paymentPageTypeText">На этих страницах вы выберете качественное постельное  Европейские производители постельных принадлежностей придерживаются стандартов.</p>
-                    </div>
-                </div>
-
-                <div class="paymentPageType">
-                    <h3 class="paymentPageTypeTitle">Наложенный платеж</h3>
-                    <div class="paymentPageTypeImage">
-                        <img class="paymentPageImage" src="image/payment4.jpg" alt=""/>
-                    </div>
-                    <div class="paymentPageTypeContent">
-                        <p class="paymentPageTypeText">
-                            На этих страницах вы выберете качественное постельное  Европейские производители постельных принадлежностей придерживаются стандартов, которые отличаются от наших соотношением сторон. Иными словами, их пододеяльники и простыни всегда шире и иногда длиннее, чем конкурирующие с ними аналоги. Например, пододеяльник, входящий в двуспальный евро комплект постельного белья, имеет ширину от 200 см. Аналогичный пододеяльник отечественных производителей не превышает, как правило, 180 см. Сегодня успешные компании пытаются удовлетворить разносторонние запросы потребителей из разных стран. Поэтому в их каталогах все чаще появляется продукция, соответствующая различным мировым стандартам.
-                        </p>
-                    </div>
+                <div class="wrapOrderBottomText">
+                    <p class="orderBottomText">Выбираете товары, нажимаете кнопку Выбираете товары, нажимаете кнопкуВыбираете товары, нажимаете кнопкуВыбираете товары, нажимаете кнопкуВыбираете товары, нажимаете кнопку</p>
+                    <p class="orderBottomTextBig">Приятных покупок</p>
                 </div>
 
             </div>
         </div>
-        <!--END payment-->
+        <!--END order-->
     </div>
     <!--END content-->
 
