--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -1425,7 +1425,7 @@
         <!--START special offers-->
         <div class="wrapSpecialOffers">
             <div class="wrapTitleDecor">
-                <h2 class="specialOffersTitle titleDecor">Специяльные предложения</h2>
+                <h2 class="specialOffersTitle titleDecor">Специальные предложения</h2>
             </div>
 
             <div class="container">
